contrast errors fix

--- a/assets/css/main-page.scss
+++ b/assets/css/main-page.scss
@@ -177,7 +177,7 @@ color:#fff;
 
 .tab button {
   display: block;
-  background-color: #205493;
+  background-color: #206993;
   color: #ffffff;
   padding: 20px 10px;
   width: 100%;
@@ -196,7 +196,7 @@ color:#fff;
 }
 
 .tab button.active {
-  background-color: #32a6a8;
+  background-color: #19387b;
 }
 
 .tabcontent {
